add testing to database service
